<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/one"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView2_loginpage"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:text="@string/textView3_name"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="用户名"
            android:inputType="textPersonName"
            android:layout_marginLeft="45dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:text="@string/textView4_password"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:hint="请输入密码"
             android:inputType="textPassword"
            android:layout_marginLeft="45dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:text="我已阅读并接受"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="80dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/button2"
            android:textColor="@android:color/background_light"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/button4"
            android:textColor="@android:color/background_light"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp"
            android:src="@mipmap/weibo"
            android:layout_alignParentTop="true"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/weixin"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:src="@mipmap/qq"/>
    </RelativeLayout>
</LinearLayout>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/one"
    tools:context="com.arcsoft.sdk_demo.MainActivity"
    tools:layout_editor_absoluteY="75dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView2_loginpage"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView3_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="11dp"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="29dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:text="@string/textView4_password"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        android:layout_marginEnd="43dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        android:layout_marginEnd="13dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="168dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="passsword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        android:layout_marginEnd="26dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editText"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="56dp"
        android:layout_height="29dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/button2"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="53dp"
        app:layout_constraintRight_toLeftOf="@+id/imageView4"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="127dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="127dp"
        app:layout_constraintTop_toTopOf="@+id/editText2"
        app:layout_constraintLeft_toRightOf="@+id/textView4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="56dp"
        android:layout_height="29dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/button4"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="127dp"
        android:layout_marginBottom="127dp"
        app:layout_constraintTop_toTopOf="@+id/editText2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="116dp"
        android:layout_height="0dp"
        android:text="@string/checkbox"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        android:layout_marginEnd="41dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        android:layout_marginStart="43dp"
        app:layout_constraintRight_toRightOf="@+id/button2"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="17dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageView3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="69dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="70dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/weibo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/weixin"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        android:layout_marginEnd="162dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        android:layout_marginRight="121dp"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@mipmap/qq"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button4"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@+id/imageView3" />

</android.support.constraint.ConstraintLayout> -->
